Only allow one dir to be selected for getExistingDirectory() on Win

Task-number: QTBUG-21372

Change-Id: Ifcb625a0c974c5ee51fb42736bd3b309bd017296
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>